--- a/newton_meter/pubspec.yaml
+++ b/newton_meter/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   sensors_plus: ^6.0.1
+  vector_math: ^2.1.4
 
   
 
