--- a/newton_meter/pubspec.yaml
+++ b/newton_meter/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   sensors_plus: ^6.0.1
   vector_math: ^2.1.4
   fl_chart: ^0.69.0
-  collection: ^1.19.0
+  collection: 1.18.0
   vector_graphics: ^1.1.11+1
 
   
